Refactor blitter-api